# batcher

./: README.md  pyproject.toml
batcher/: __main__.py  types.py
examples/: evaluation-strategies.toml  sample.toml
sbatcher/: __main__.py  cli.py
slurmbatcher/: __main__.py  utils.py
